# Matrix-bd

./: .deepsource.toml  .eslintrc.js  .gitignore  .mcp.json  CI_DEMO.md  CLAUDE.md  CODEBASE_REVIEW.md  DEPLOYMENT.md  Makefile  left_out_tasks.md  pyproject.toml
backend/: .env.example  DEPLOY_TEST.md  pyproject.toml  railway.json  requirements.lock.txt  test_compile.py  test_create.py  test_parser.py  test_replace.py  test_schema.py  test_schema2.py  test_schema3.py  test_text.py  test_validation.py  test_validation_pct.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  passwords.py  ratelimit.py  security.py  uploads.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/domain/: state_machine.py
backend/app/rbac/: guards.py  permissions.py  roles.py
backend/app/routers/: audit.py  auth.py  bd.py  business_admin.py  delegations.py  design.py  financial_closure.py  launch_approval.py  legal.py  loi.py  notifications.py  nso.py  project.py  project_excellence.py  sites.py  staging.py  supervisor_codes.py  tenancy.py  users.py
backend/app/services/: _common.py  audit_service.py  auth_repo.py  bd_service.py  bd_status_service.py  budget_service.py  business_admin_documents_service.py  business_admin_service.py  change_request_service.py  delegation_service.py  design_service.py  finance_service.py  financial_closure_service.py  launch_service.py  legal_service.py  licensing_status.py  loi_service.py  notification_service.py  nso_service.py  photo_service.py  project_excellence_service.py  project_service.py  query_service.py  reversible_service.py  site_documents_service.py  site_stage_status_service.py  site_tracker_service.py  storage_service.py  supervisor_code_service.py  tenancy_service.py  workflow_unlocks.py
backend/database/: schema.sql  verified.sql
backend/database/backups/: 202606145_pre_cleanup_backup_and_revert.sql
backend/database/migrations/: 202605241_role_canonicalization_and_lifecycle.sql  202605261_role_three_tier_business_admin.sql  202605262_business_admins_table.sql  202605263_module_codes_table.sql  202605264_supervisor_invite_codes_table.sql  202605265_user_module_memberships_table.sql  (+50 more)
backend/tests/: conftest.py  test_admin_site_documents.py  test_auth_refresh_grace.py  test_batch_a_observability.py  test_batch_b_correctness.py  test_batch_c_infra.py  test_batch_e_l_response.py  test_batch_perf_load_readiness.py  test_batch_sec_auth_config.py  test_batch_sec_authz.py  test_bd_regression.py  test_branding_conn_release.py  test_business_admin_remove_user.py  test_ca_code_unique.py  test_complexity_hotfixes.py  test_create_pipeline_payloads.py  test_design_admin_undo.py  test_design_gfc_two_stage.py  test_excellence_documents.py  test_finance_approval_legal_status.py  test_hygiene_globals.py  test_launch_validation_loop.py  test_licensing_na.py  test_list_sites_total.py  test_loi_send_back.py  test_migration.py  test_migration_ledger.py  test_nso_stage_three_gate.py  test_nso_stage_two_body.py  test_nso_supervisor_only.py  test_pagination_bounds.py  test_pe_budget_save_guards.py  test_project_excellence_shared_budget.py  test_project_init_and_budget.py  test_qa_report_view_routes.py  test_qa_reports.py  test_rent_split_remediation.py  test_reversible_undo.py  test_revoke_reallocation.py  test_role_flexibility_delegation.py  (+6 more)
(+256 files in other folders)
