[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "z-matrix-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pyjwt[crypto]>=2.8",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "bcrypt>=4.1",
    # Pure-python magic-byte sniffing for upload validation (#226). No libmagic
    # system dependency — safer for the Railway/Nixpacks build than python-magic.
    "filetype>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["database*", "tests*", ".venv*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

