[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "z-matrix-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pyjwt[crypto]>=2.8",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "bcrypt>=4.1",
    # Pure-python magic-byte sniffing for upload validation (#226). No libmagic
    # system dependency — safer for the Railway/Nixpacks build than python-magic.
    "filetype>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["database*", "tests*", ".venv*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff.lint]
# Phased docstring policy (#241). No global `select` is set here, so a plain
# `ruff check` keeps ruff's defaults and does NOT flag the ~300 not-yet-documented
# router/core symbols during the phased rollout. The Phase-1 gate enforces the
# *presence* of docstrings on public service symbols (wired into CI by #223):
#     ruff check app/services --select D101,D102,D103
# The extend-ignore below covers the module/package/__init__ docstring rules and
# the two mutually-exclusive multiline-summary rules so that a broader `--select D`
# (stylistic D2xx/D4xx) can be adopted in a later phase without churn.
extend-ignore = ["D100", "D104", "D107", "D203", "D213"]
# C901 cyclomatic-complexity gate (#223 1.2). Added to the default rule set so a
# plain `ruff check backend/app` (wired into CI) fails if any function exceeds the
# ceiling. The whole backend currently passes at 15; keep new/refactored code at
# or below it (the #240 god-function extractions are tracked separately).
extend-select = ["C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Tests don't need docstrings.
"tests/*" = ["D"]

